# uv_management

./: Makefile  README.md  ad_hoc_installs.txt  requirements_ai_2025-01-27.txt  requirements_ai_2025-01-28.txt  requirements_ai_2025-02-26.txt  requirements_ai_2025-03-31.txt  requirements_ai_2025-06-22.txt  requirements_ai_2025-07-01.txt  requirements_ai_2025-07-26.txt  requirements_ai_2026-02-20.txt
toml_version/: .gitignore  CLAUDE.md  Makefile
toml_version/2025-07-28/: Makefile  ad_hoc_installs.txt  pyproject.toml
toml_version/2026-02-20/: Makefile  pyproject.toml
toml_version/ai_my_date/: pyproject.toml
toml_version/ai_my_date/ai/: __init__.py
