[project]
name = "ai"
version = "0.1.0"
description = "AI python project"
authors = []
requires-python = ">=3.12,<3.13"
dependencies = [
    "astropy",
    "attrs",
    "beautifulsoup4",
    "bertopic",
    "black",
    "cem",
    "click",
    "cogapp",
    "cookiecutter",
    "cryptography",
    "cvxpy",
    "cython",
    "daiquiri",
    "datashader",
    "dowhy",
    "dspy",
    "duckdb",
    "duckdb-engine",
    "easier",
    "equinox",
    "flake8",
    "fleming",
    "folium",
    "fuzzypicker",
    "geopy",
    "google-auth",
    "google-auth-oauthlib",
    "google-cloud-core",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "gspread",
    "hdbscan",
    "holidays",
    "holoviews[recommended]",
    "hvplot",
    "ibis-framework[postgres]",
    "ipympl",
    "ipython",
    "ipywidgets",
    "isort",
    "jax-metal",
    "jax[cpu]",
    "jinja2",
    "joblib",
    "jupyterlab",
    "jupyterlab-code-formatter",
    "langgraph",
    "lifelines",
    "lightgbm",
    "maidenhead",
    "marimo",
    "mlflow",
    "model2vec",
    "more-itertools",
    "mypy",
    "networkx",
    "numpy",
    "numpyro", # for pymc jax sampling
    "oauth2client",
    "oauthlib",
    "ollama",
    "open-webui",
    "openai",
    "optuna",
    "optuna-dashboard",
    "pacmap",
    "pandashells[full]",
    "pandera",
    "pandoc",
    "panel",
    "patsy",
    "pdbpp",
    "pgcli",
    "pip",
    "plotly",
    "polars",
    "psutil",
    "psycopg2-binary",
    "pyarrow",
    "pydantic",
    "pydantic-ai",
    "pymc",
    "pytest",
    "python-dateutil",
    "python-lsp-server[all]",
    "requests",
    "ruff",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "simpy",
    "skrub[transformers]",
    "spacy",
    "sqlalchemy",
    "sqlglot", # nice for marimo
    "sqlmodel", # nice for marimo
    "statsmodels",
    "streamz",
    "sympy",
    "tantivy",
    "torch",
    "tqdm",
    "twine",
    "umap-learn",
    "visidata",
    "watchdog",
    "wheel",
    "wrapt",
    "xgboost", # requires brew install libomp
    "xmltodict",
]

[tool.hatch.build.targets.wheel]
packages = ["ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"